--- a/index.html
+++ b/index.html
@@ -149,5 +149,17 @@
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
+    <!-- <script>
+      window.difyChatbotConfig = {
+        token: 'ohku73qtYn1ANW0d',
+        baseUrl: 'http://11.0.0.134',
+      }
+    </script>
+    <script src="http://11.0.0.134/embed.min.js" id="ohku73qtYn1ANW0d" defer></script>
+    <style>
+      #dify-chatbot-bubble-button {
+        background-color: #1c64f2 !important;
+      }
+    </style> -->
   </body>
 </html>
